--- a/templates/wgX.conf.j2
+++ b/templates/wgX.conf.j2
@@ -1,5 +1,5 @@
-{% set interface = vars.get('wireguard_' + item + '_interface', {}) -%}
-{% set peers = vars.get('wireguard_' + item + '_peers', {}) -%}
+{% set interface = wireguard_interface[item] -%}
+{% set peers = wireguard_peers[item] -%}
 
 {% set interface_required_keys = { 'address': 'Address', 'private_key': 'PrivateKey' } -%}
 {% set interface_optional_keys = {
